--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,8 +1,9 @@
-<div class="container">
+<div class="container mt-3">
   <div class="row">
     <section class="col-3">
-      <h5 class="text-warning ml-3">Sort</h5>
-      <select class="custom-select mb-3" (change) = "onSortSelected($event.target.value)">
+      <ng-container *ngIf="types && brands">
+      <h5 class="text-warning ml-3 mt-4 mb-3">Sort</h5>
+      <select class="custom-select mb-4" (change) = "onSortSelected($event.target.value)">
         <option *ngFor="let sort of sortOptions"
         [value] = "sort.value"
         >{{sort.name}}</option>
@@ -28,6 +29,7 @@
           {{type.name}}
         </li>
       </ul>
+    </ng-container>
     </section>
     <section class="col-9">
       <div class="d-flex justify-content-between align-items-center pb-2">
@@ -37,7 +39,7 @@
          [pageNumber]="this.shopParams.pageNumber"
         >
         </app-paging-header>
-        <div class="form-inline mt-2">
+        <div class="form-inline mt-2" *ngIf="products">
           <input class="form-control mr-2" #search style="width: 300px;" placeholder="Search" type="text">
           <button (keyup.enter) = "onSearch()" class="btn btn-outline-primary my-2" (click) = "onSearch()">Search</button>
           <button class="btn btn-outline-success ml-2 my-2" (click) = "onReset()">Reset</button>
